fixes alignment of create button on viewer footer

--- a/ui/controls/viewer.reel/_viewer.css
+++ b/ui/controls/viewer.reel/_viewer.css
@@ -24,13 +24,11 @@
 
 .Viewer-footer {
     flex-shrink: 0;
-    border-top: 1px solid rgba(0,0,0,.2);
 }
 
 /* Create */
 
 .Viewer-createButton {
-    margin-top: -2px;
     display: flex;
     align-items: center;
     height:         3em;
